MUSIC PLAYER IS FINALLY WORKING

--- a/musiq/public/index.html
+++ b/musiq/public/index.html
@@ -22,9 +22,8 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+      
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -36,5 +35,38 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+      <script>
+          window.onSpotifyWebPlaybackSDKReady = () => {
+              const token = "BQDjJsEJ-fwnCMDacfJPrxY1jx3SynU8HgSOeXfcXVHDdMWy-5O0A95SC_KVQ5590ivNoHzGKsClthJkQZBMEYQ2hK0CAZq5ZLL6PuCJE8xfytVfnxQYKObLdpC8Fo_vm3pwf3x2Q8Y9CqVjLjqB4v0YQvi8r9xyog6Nd16iS5wg1w";
+              const player = new Spotify.Player({
+                  name: 'Web Playback SDK Quick Start Player',
+                  getOAuthToken: cb => { cb(token); }
+              });
+  
+              // Error handling
+              player.addListener('initialization_error', ({ message }) => { console.error(message); });
+              player.addListener('authentication_error', ({ message }) => { console.error(message); });
+              player.addListener('account_error', ({ message }) => { console.error(message); });
+              player.addListener('playback_error', ({ message }) => { console.error(message); });
+  
+              // Playback status updates
+              player.addListener('player_state_changed', state => { console.log(state); });
+  
+              // Ready
+              player.addListener('ready', ({ device_id }) => {
+                  console.log('Ready with Device ID', device_id);
+              });
+  
+              // Not Ready
+              player.addListener('not_ready', ({ device_id }) => {
+                  console.log('Device ID has gone offline', device_id);
+              });
+  
+              // Connect to the player!
+              player.connect();
+          };
+      </script>
   </body>
 </html>
